# QuotationAanalysisAgent

./: .coverage  .env copy.example  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml  sessions_standalone.json
.claude/: ChangeLog.md  claude.md
alembic/: env.py
alembic/versions/: initial_migration.py
docker/: Dockerfile  docker-compose.yml
notebooks/: test_api.ipynb
output_template/: Quotation Template.xlsx
quotation_core/core/: config.py  logging_config.py  security.py
quotation_core/extraction/: __init__.py  excel_exporter.py  llm_service.py  pdf_parser.py  pipeline.py  post_processor.py  regex_extractor.py
quotation_core/models/: __init__.py  database.py  extraction.py
quotation_core/services/: __init__.py  export_service.py  storage_service.py
quotation_extraction/: __init__.py
quotation_extraction/api/: __init__.py  main.py
quotation_extraction/api/routers/: __init__.py  extraction.py  health.py
quotation_extraction/core/: __init__.py  config.py  logging_config.py  security.py
quotation_extraction/extraction/: __init__.py  excel_exporter.py  image_preprocessor.py  llm_service.py  page_classifier.py  pdf_rasterizer.py  pipeline.py  post_processor.py  regex_extractor.py
quotation_extraction/models/: __init__.py  database.py  extraction.py  schemas.py
quotation_extraction/services/: __init__.py  session_manager.py  storage_service.py
quotation_intelligence/: __init__.py
quotation_intelligence/api/: main.py
quotation_intelligence/api/routers/: __init__.py  documents.py  exports.py  health.py  (+1 more)
quotation_intelligence/core/: config.py  logging_config.py
quotation_intelligence/extraction/: __init__.py  llm_service.py  pdf_parser.py  pipeline.py  post_processor.py  regex_extractor.py
quotation_intelligence/models/: __init__.py  database.py  schemas.py
quotation_intelligence/services/: __init__.py  export_service.py  storage_service.py
quotation_intelligence/tasks/: __init__.py  celery_app.py  processing_tasks.py
quotation_intelligence_standalone/: common_utils.py
quotation_intelligence_standalone/api/: main.py
results/: Quotation - S06666 (1)_llm_raw_attempt1.txt  Quotation - S06666 (1)_llm_raw_attempt2.txt
scripts/: extract_s06666.py  process_pdf.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_post_processor.py  test_regex_extractor.py
(+2 files in other folders)
